# Input-Trio

./: .gitignore  .gitmodules  README.md  TRAINING.md  dataset.py  log.md
Component-1.1_Tokenizer/: README.md  requirements.txt  tokenizer.py
master-input/: .gitignore  CMakeLists.txt  hub_push.py
master-input/src/: input_engine.cpp  main.cpp  repo.cpp  sentences.txt  train_input_layer.cpp  training.cpp  validation.cpp
master-input/tests/: test.cpp  test_train_numerical.cpp
